--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active"
@@ -109,6 +115,21 @@
                                 <div class="carousel-item"
                                     style="background-image: url(./assets/imageEventos8.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
                                 </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imageEventos9.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imageEventos10.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imageEventos11.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imageEventos12.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imageEventos13.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
                                 data-slide="prev">
@@ -125,15 +146,15 @@
                     <div>
                         <h3>Eventos</h3>
                         <p class="eventos__texto">Oferecemos um serviço profissional de churrasco para eventos de todos
-                            os tamanhos, com um buffet
-                            completo que atende os mais variados gostos. Cada evento é cuidadosamente planejado para
-                            proporcionar uma experiência única, com cortes selecionados e acompanhamentos frescos que
+                            os tamanhos. Cada churrasco é cuidadosamente planejado para
+                            proporcionar a melhor experiência, com técnicas que
                             valorizam o sabor e a tradição do verdadeiro churrasco brasileiro. <br> Seja para
                             confraternizações, casamentos, aniversários ou eventos corporativos, garantimos qualidade,
                             praticidade e sabor em cada detalhe.
                         </p>
                     </div>
                 </div>
+
                 <div class="imagens__conteudo--churrascos">
                     <div class="imagens__conteudo--div2">
                         <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
@@ -146,10 +167,15 @@
                                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active"
-                                    style="background-image: url(./assets/imagemChurrasco1.svg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                    style="background-image: url(./assets/imagemChurrasco9.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
                                 </div>
                                 <div class="carousel-item"
                                     style="background-image: url(./assets/imagemChurrasco2.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
@@ -172,6 +198,21 @@
                                 <div class="carousel-item"
                                     style="background-image: url(./assets/imagemChurrasco8.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
                                 </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imagemChurrasco10.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imagemChurrasco11.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imagemChurrasco12.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imagemChurrasco13.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
+                                <div class="carousel-item"
+                                    style="background-image: url(./assets/imagemChurrasco14.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center;">
+                                </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button"
                                 data-slide="prev">
@@ -187,11 +228,11 @@
                     </div>
                     <div>
                         <h3>Churrascos</h3>
-                        <p class="eventos__texto">Nosso churrasco é preparado com cortes selecionados e técnicas que
+                        <p class="eventos__texto">Nosso churrasco é preparado com técnicas que
                             destacam o sabor e a
                             suculência de cada peça. Com um cuidado especial em cada detalhe, oferecemos uma experiência
                             autêntica, onde a qualidade e o sabor são prioridade. <br> Perfeito para qualquer ocasião, o
-                            churrasco é servido com acompanhamentos frescos e variados, garantindo uma refeição completa
+                            churrasco é servido com sabor e qualidade, garantindo uma refeição completa
                             e
                             saborosa para você e seus convidados.
                     </div>
